centjes-gen/test_resources/balance/error/as-is/BE_ACCOUNT_TOTAL.cent
currency USD 0.01

account assets

2023-11-24
  * assets +184467440737095516.15 USD
  * assets                  +0.02 USD
